[package]
name = "tw_merge"
version = "0.1.10"
edition = "2024"
authors = ["Rustify"]
description = "Macros for merging Tailwind CSS classes or creating variants."
keywords = ["tailwind", "css", "rust", "ui", "leptos"]
license = "MIT"
readme = "./README.md"

[dependencies]
nom = {version = "7"}
tw_merge_variants = { path = "../tw_merge_variants", version = "0.1.0", optional = true }

[dev-dependencies]
divan = "0.1.14"
fastrand = "2"

[[bench]]
name = "merge"
harness = false

[features]
variant = ["tw_merge_variants"]
debug = []

[package.metadata.docs.rs]
all-features = true
